<resources>
    <string name="app_name">LDVELH</string>
    <string name="title_activity_adventure">AdventureActivity</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="empty_string" />
    <string name="slash_symbol">/</string>
    <string name="potion_choice">Choix de potion</string>
    <string name="skill_potion">Potion d\'adresse</string>
    <string name="stamina_potion">Potion de vigueur</string>
    <string name="luck_potion">Potion de bonne fortune</string>
    <string name="you">Vous</string>
    <string name="failed">Échec</string>
    <string name="new_game">Nouvelle Partie</string>
    <string name="character_dead">Vous êtes mort</string>
    <string name="back_pressed">Vous avez appuyé sur Retour</string>
    <string name="default_initialization">Par défaut</string>
    <string name="load_game_from_previous_book">Charger à partir du livre précédent</string>
    <string name="restart_adventure">Recommencer l\'aventure</string>
    <string name="play_other_book">Jouer un autre livre</string>
    <string name="quit">Quitter</string>
    <string name="skill">Habileté</string>
    <string name="max_skill">Habileté de départ</string>
    <string name="stamina">Endurance</string>
    <string name="max_stamina">Endurance de départ</string>
    <string name="luck">Chance</string>
    <string name="max_luck">Chance de départ</string>
    <string name="gold">Or</string>
    <string name="food">Repas</string>
    <string name="set_gold">setGold</string>
    <string name="add_item">addItem</string>
    <string name="add_note">addNote</string>
    <string name="add_consumable_food">addConsumableFood</string>
    <string name="gold_amount">%1$s po</string>
    <string name="tab_title_combat">Combat</string>
    <string name="tab_title_equipment">Équipement</string>
    <string name="tab_title_gods">Dieux</string>
    <string name="tab_title_items">Objets</string>
    <string name="tab_title_magic">Magie</string>
    <string name="tab_title_magic_items">Objets magiques</string>
    <string name="tab_title_magic_stones">Pierres de Magie</string>
    <string name="tab_title_map">Carte</string>
    <string name="tab_title_spells">Formules magiques</string>
    <string name="tab_title_utilities">Outils</string>
    <string name="add_new_item">Nouvel Item</string>
    <string name="add_new_consumable_item">Nouvel Item Consommable</string>
    <string name="add_new_note">Nouvelle Note</string>
    <string name="magic_label">Points de Magie:</string>
    <string name="attack_bonus">bonus</string>
    <string name="your_team">Héros</string>
    <string name="enemies">Ennemis</string>
    <string name="select_property">Attribut</string>
    <string name="add">Ajouter</string>
    <string name="max">Max</string>
    <string name="lastParagraph">Dernier Paragraphe</string>
    <string name="notes">Notes</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="cc">Chroniques Crétoises</string>
    <string name="df">Défis Fantastiques</string>
    <string name="qg">Quête du Graal</string>
    <string name="so">Sorcellerie!</string>
    <string name="cc_01">cc_01</string>
    <string name="cc_02">cc_02</string>
    <string name="cc_03">cc_03</string>
    <string name="df_01">df_01</string>
    <string name="df_02">df_02</string>
    <string name="df_03">df_03</string>
    <string name="df_04">df_04</string>
    <string name="df_05">df_05</string>
    <string name="df_06">df_06</string>
    <string name="df_07">df_07</string>
    <string name="df_08">df_08</string>
    <string name="df_09">df_09</string>
    <string name="df_10">df_10</string>
    <string name="df_11">df_11</string>
    <string name="qg_01">qg_01</string>
    <string name="qg_02">qg_02</string>
    <string name="qg_03">qg_03</string>
    <string name="qg_04">qg_04</string>
    <string name="qg_05">qg_05</string>
    <string name="qg_06">qg_06</string>
    <string name="qg_07">qg_07</string>
    <string name="qg_08">qg_08</string>
    <string name="so_01">so_01</string>
    <string name="so_02">so_02</string>
    <string name="so_03">so_03</string>
    <string name="so_04">so_04</string>
    <string name="cc_01_title">La Vengeance d\'Althéos</string>
    <string name="cc_02_title">Le Labyrinthe du Roi Minos</string>
    <string name="cc_03_title">L\'odyssée d\'Althéos</string>
    <string name="df_01_title">Le Sorcier de la Montagne de Feu</string>
    <string name="df_02_title">La Citadelle du Chaos</string>
    <string name="df_03_title">La Forêt de la Malédiction</string>
    <string name="df_04_title">La Galaxie Tragique</string>
    <string name="df_05_title">La Cité des Voleurs</string>
    <string name="df_06_title">Le Labytinthe de la Mort</string>
    <string name="df_07_title">L\'Île du Roi Lézard</string>
    <string name="df_08_title">Le Marais aux Scorpions</string>
    <string name="df_09_title">La Sorcière des Neiges</string>
    <string name="df_10_title">Le Manoir de l\'Enfer</string>
    <string name="df_11_title">Le Talisman de la Mort</string>
    <string name="qg_01_title">Le Château des Ténèbres</string>
    <string name="qg_02_title">L\'Antre des Dragons</string>
    <string name="qg_03_title">Les Portes de l\'Au-delà</string>
    <string name="qg_04_title">Le Voyage de l\'Effroi</string>
    <string name="qg_05_title">Au Royaume de l\'Épouvante</string>
    <string name="qg_06_title">Le Temps de la Malédiction</string>
    <string name="qg_07_title">Le Tombeau des Maléfices</string>
    <string name="qg_08_title">La Légion des Morts</string>
    <string name="so_01_title">Les Collines Maléfiques</string>
    <string name="so_02_title">La Cité des Pièges</string>
    <string name="so_03_title">Les Sept Serpents</string>
    <string name="so_04_title">La Couronne des Rois</string>
    <string name="cc_strength">Force</string>
    <string name="cc_protection">Protection</string>
    <string name="cc_honor">Honneur</string>
    <string name="cc_shame">Honte</string>
    <string name="cc_endurance">Endurance</string>
    <string name="cc_intelligence">Intelligence</string>
    <string name="cc_value_bonus_total">%1$s + %2$s = %3$s</string>
    <string name="cc_wounds">Blessures</string>
    <string name="cc_unscathed">Indemne</string>
    <string name="cc_wounded">Blessé</string>
    <string name="cc_badly_wounded">Grièvement Blessé</string>
    <string name="cc_dead">Mort</string>
    <string name="cc_aethras_jewel">Bijou d\'Aéthra</string>
    <string name="cc_protector_god">Protecteur</string>
    <string name="cc_equipped">Équipé</string>
    <string name="cc_club">Massue</string>
    <string name="cc_add_equipment">addEquipment</string>
    <string name="cc_aphrodite">Aphrodite</string>
    <string name="cc_apollon">Apollon</string>
    <string name="cc_ares">Arès</string>
    <string name="cc_athena">Athéna</string>
    <string name="cc_hera">Héra</string>
    <string name="cc_poseidon">Poséidon</string>
    <string name="cc_asclepios">Asclépios</string>
    <string name="cc_demeter">Déméter</string>
    <string name="cc_dionysos">Dionysos</string>
    <string name="cc_eris">Eris</string>
    <string name="cc_furies">Furies</string>
    <string name="cc_hecate">Hécate</string>
    <string name="cc_hephaistos">Héphaïstos</string>
    <string name="cc_favorable">Favorable</string>
    <string name="cc_neutral">Neutre</string>
    <string name="cc_unfavorable">Défavorable</string>
    <string name="cc_tutelary_god_choice">Choisissez votre dieu tutélaire</string>
    <string name="cc_invoke_zeus">Invoquer Zeus</string>
    <string name="cc_zeus_ressuscitate">Ressusciter</string>
    <string name="cc_zeus_gain_random_honor_points">Gagner 1d6 points d\'Honneur</string>
    <string name="cc_zeus_regain_honor_points">Regagner des points d\'Honneur</string>
    <string name="cc_zeus_all_gods_to_neutral_attitude">Tous les dieux Neutres</string>
    <string name="cc_equipment_name_caption">Nom de l\'équipement</string>
    <string name="df02_magic">Magie</string>
    <string name="so_ingredients">Ingrédients</string>
    <string name="so_spell_01">ZAP</string>
    <string name="so_spell_02">FEU</string>
    <string name="so_spell_03">HOR</string>
    <string name="so_spell_04">MUR</string>
    <string name="so_spell_05">LOI</string>
    <string name="so_spell_06">MOU</string>
    <string name="so_spell_07">GRO</string>
    <string name="so_spell_08">ECU</string>
    <string name="so_spell_09">CLE</string>
    <string name="so_spell_10">FIL</string>
    <string name="so_spell_11">DEV</string>
    <string name="so_spell_12">SIX</string>
    <string name="so_spell_13">JIG</string>
    <string name="so_spell_14">GOB</string>
    <string name="so_spell_15">OGR</string>
    <string name="so_spell_16">COL</string>
    <string name="so_spell_17">UBI</string>
    <string name="so_spell_18">DOC</string>
    <string name="so_spell_19">LEN</string>
    <string name="so_spell_20">SOU</string>
    <string name="so_spell_21">MAG</string>
    <string name="so_spell_22">PAN</string>
    <string name="so_spell_23">CHU</string>
    <string name="so_spell_24">FOL</string>
    <string name="so_spell_25">NUI</string>
    <string name="so_spell_26">BOU</string>
    <string name="so_spell_27">PUE</string>
    <string name="so_spell_28">TEL</string>
    <string name="so_spell_29">HOU</string>
    <string name="so_spell_30">BOF</string>
    <string name="so_spell_31">AMI</string>
    <string name="so_spell_32">BIS</string>
    <string name="so_spell_33">FOR</string>
    <string name="so_spell_34">ROC</string>
    <string name="so_spell_35">HOP</string>
    <string name="so_spell_36">VEN</string>
    <string name="so_spell_37">FIX</string>
    <string name="so_spell_38">SOM</string>
    <string name="so_spell_39">VOL</string>
    <string name="so_spell_40">INV</string>
    <string name="so_spell_41">LUX</string>
    <string name="so_spell_42">REV</string>
    <string name="so_spell_43">BLA</string>
    <string name="so_spell_44">WAF</string>
    <string name="so_spell_45">ZIP</string>
    <string name="so_spell_46">VUE</string>
    <string name="so_spell_47">RES</string>
    <string name="so_spell_48">ZED</string>
    <string name="so_ingredient_01">Anneau de Métal Vert</string>
    <string name="so_ingredient_02">Anneau de Perles Fines</string>
    <string name="so_ingredient_03">Bijou en Or</string>
    <string name="so_ingredient_04">Bracelet d\'Os</string>
    <string name="so_ingredient_05">Branche de Jeune Chêne</string>
    <string name="so_ingredient_06">Cailloux</string>
    <string name="so_ingredient_07">Calotte de Toile</string>
    <string name="so_ingredient_08">Cire d\'Abeille</string>
    <string name="so_ingredient_09">Dent de Géant</string>
    <string name="so_ingredient_10">Dents de Gobelins</string>
    <string name="so_ingredient_11">Eau Bénite</string>
    <string name="so_ingredient_12">Flûte de Bambou</string>
    <string name="so_ingredient_13">Globe de Cristal</string>
    <string name="so_ingredient_14">Joyau Solaire</string>
    <string name="so_ingredient_15">Potion Médicinale|Jus de Myrtibelle</string>
    <string name="so_ingredient_16">Masque Noir</string>
    <string name="so_ingredient_17">Médaillon Incrusté de Pierreries</string>
    <string name="so_ingredient_18">Miroir au Cadre d\'Or</string>
    <string name="so_ingredient_19">Pendule de Cuivre</string>
    <string name="so_ingredient_20">Perruque Verte</string>
    <string name="so_ingredient_21">Pièce de Monnaie</string>
    <string name="so_ingredient_22">Pot de Colle</string>
    <string name="so_ingredient_23">Potion d\'Eau de Feu</string>
    <string name="so_ingredient_24">Poudre de Pierre</string>
    <string name="so_ingredient_25">Poudre Jaune</string>
    <string name="so_ingredient_26">Sable</string>
    <string name="so_ingredient_27">Tampons</string>
    <string name="so_ingredient_28">Trompe à Vent</string>
</resources>